--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <h1>Mike Terzza</h1>
         <h2>Deadlines and Side Projects</h2>
         <p>22/07/14 @ Hey!Stac</p>
+        <p><a href="http://github.com/terzza/deadlines_talk">View this on Github</a></p>
     </div>
 
     <div id="slide1" class="step slide" data-x="1500" data-y="0">
