GHP Link formatting

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
     <div id="slide0" class="step slide" data-x="0" data-y="0">
         <h1>Mike Terzza</h1>
         <h2>Deadlines and Side Projects</h2>
-        <p>22/07/14 @ Hey!Stac</p>
-        <p><a href="http://github.com/terzza/deadlines_talk">View this on Github</a></p>
+        <p>
+            22/07/14 @ Hey!Stac<br>
+            <a href="http://github.com/terzza/deadlines_talk">View this on Github</a>
+        </p>
     </div>
 
     <div id="slide1" class="step slide" data-x="1500" data-y="0">
